tests/snapshots/mixed__base_template-2.snap
---
source: tests/mixed.rs
expression: formatted_output
---
<!DOCTYPE html>
<html lang="en">
    <head>
        <title>
            {% block title %}
                {{ title }}
                - My Site
            {% endblock %}
        </title>
        {% block head %}{% endblock %}
    </head>
    <body>
        <div id="content">
            {% block content %}
                <p>Placeholder content</p>
            {% endblock %}
        </div>
    </body>
</html>
