tests/snapshots/mixed__block_surrounded_by_html.snap
---
source: tests/mixed.rs
description: "<div id=\"content\"> {% block content %} <p>Oh, this is a paragraph</p> {% endblock %} </div>\n"
---
<div id="content">
    {% block content %}
        <p>Oh, this is a paragraph</p>
    {% endblock %}
</div>
