tests/snapshots/mixed__for_item-2.snap
---
source: tests/mixed.rs
expression: formatted_output
---
<h1>Users</h1>
<ul>
    {% for user in users %}
        <li>
            {{ user.name }}
        </li>
    {% endfor %}
</ul>
