tests/snapshots/mixed__for_item.snap
---
source: tests/mixed.rs
expression: input
---
<h1>Users</h1><ul>{% for user in users %}<li>{{ user.name }}</li>{% endfor %}</ul>
