tests/snapshots/mixed__full_blown-2.snap
---
source: tests/mixed.rs
expression: formatted_output
---
{% extends "base.html" %}
{% block title %}
    Profile
{% endblock %}
{% block head %}
    {# Template comment: Styles specific to the profile page #}
    <style>
        /* CSS comment: highlight user name */
        .username {
            font-weight: bold;
            color: {{ name_color }};
        }
    </style>
    <script>
        // JS comment: greet user on page load
        document.addEventListener("DOMContentLoaded", () => {
            alert("Welcome, {{ user.name }}!");
        });
    </script>
{% endblock %}
{% block content %}
    <!-- HTML comment: Profile header -->
    <h1 class="username">{{ user.name }}</h1>
    {# Loop through user posts #}
    <ul>
        {% for post in user.posts %}
            <li>{{ post.title }}</li>
        {% endfor %}
    </ul>
{% endblock %}
