tests/snapshots/mixed__mixed-2.snap
---
source: tests/mixed.rs
expression: formatted_output
---
<div id="content">
    {% block content %}
        <p>Oh, this is a paragraph</p>
    {% endblock %}
</div>
